src/test/vm/clsconstant_redecl2.php.exp
HipHop Fatal error: Cannot override previously defined constant A::FOO in C in src/test/vm/clsconstant_redecl2.php on line 13
