src/test/vm/clsconstant_redecl2.php.filter
#!/bin/bash
sed -e 's, in [^ ]*src/, in src/,'
